bodhi-aws-main/deployment/distribution/mlflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: kubeflow
    istio-injection: enabled
  name: mlflow
  annotations:
    # annotation key is configurable
    iam.amazonaws.com/permitted: "arn:aws:iam::412674115502:role/.*"
