bodhi-aws-main/deployment/distribution/mlflow/mlflow-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlflow
  namespace: mlflow

spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - console.bodhimlops.xyz
  http:
    - headers:
        request:
          add:
            x-forwarded-prefix: /mlflow
      match:
        - uri:
            prefix: /mlflow/
      rewrite:
        uri: /
      route:
        - destination:
            host: mlflow.mlflow.svc.cluster.local
            port:
              number: 80
